Functioning background for mobile

--- a/src/pages/athlete.astro
+++ b/src/pages/athlete.astro
@@ -7,7 +7,7 @@ import arrow from "../images/icons/arrow-simple.svg";
 
 const image = {
   url: wolverine,
-  position: 'center',
+  position: '60%',
 }
 ---
 
