--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,9 +46,8 @@ const turkeyVar = `url(${turkey})`;
 const corazonVar = `url(${corazon})`;
 const markVar = `url(${mark})`;
 
-// take out img={img} from baselayout
 ---
-<BaseLayout pageTitle={pageTitle} > 
+<BaseLayout pageTitle={pageTitle} img={img} > 
   <div class="home-wrapper">
     <div class="home-title-wrapper">
       <div class="home-title-content">
