Style gallery caption - add border and shadow

--- a/src/components/PhotoDisplay.astro
+++ b/src/components/PhotoDisplay.astro
@@ -327,11 +327,12 @@ button {
   transition: 1s opacity ease-in;
 }
 .credit-text-wrapper {
-  padding: 1vw 2vw;
+  padding: 2vw 3vw;
   background-color: rgba(64, 64, 64, 0.9);
   border-radius: 3px;
-  /* border-top: 5px solid rgb(254, 7, 62); */
+  border-top: 6px solid rgb(254, 7, 62);
   border-left: 12px solid rgb(245, 245, 245);
+  box-shadow: 0 0 3px rgb(64, 64, 64);
 }
 .credit-text-wrapper > p {
   margin: 0;
