--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -282,6 +282,7 @@ const markVar = `url(${mark})`;
   }
   .bg-img2 {
     background-image: var(--turkeyVar);
+    background-position: 35%;
   }
   @media screen and (min-width: 770px) {
     .home-title-wrapper {
