--- a/src/components/PhotoDisplay.astro
+++ b/src/components/PhotoDisplay.astro
@@ -256,7 +256,7 @@ button {
   padding: 0;
 }
 .gallery {
-  height: 100vh;
+  height: calc(100vh + 1px);
   width: 100vw;
   position: relative;
 }
