--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -35,5 +35,13 @@ import '../styles/global.css';
   }
 </style>
 <script>
-  window.scrollTo(0,1);
+/* iOS re-orientation fix */
+if (navigator.userAgent.match(/iPhone/i) || navigator.userAgent.match(/iPad/i)) {
+    /* iOS hides Safari address bar */
+    window.addEventListener("load",function() {
+        setTimeout(function() {
+            window.scrollTo(0, 1);
+        }, 1000);
+    });
+}
 </script>
