--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -73,6 +73,7 @@ const image = {
   }
   h1 {
     font-family: "Unbound";
+    font-size: 1.95rem;
   }
   h1, h2 {
     width: fit-content;
@@ -81,6 +82,9 @@ const image = {
 
   }
   @media screen and (min-width: 770px) {
+    h1 {
+      font-size: 2.5rem;
+    }
     .about-wrapper {
       display: grid;
       grid-template-columns: auto 1fr 1fr auto;
