--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -44,7 +44,7 @@ h1 {
   height: 4px;
   margin: 5px 0 5px 0;
   background-color: rgb(245, 245, 245);
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 3px rgb(64, 64, 64);
   border-radius: 1.5px;
 }
 .nav-links {
