More small styling tweaks

--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -28,6 +28,7 @@ const prositeURL = `/pro-site/${url}`;
     place-self: start;
     height: 100%;
     max-width: 40px;
+    min-height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -69,6 +70,7 @@ const prositeURL = `/pro-site/${url}`;
   }
   a > h4 {
     margin: 16px 0;
+    font-weight: 600;
   }
   a:hover h4 {
     text-decoration: underline;
