--- a/src/pages/dietitian.astro
+++ b/src/pages/dietitian.astro
@@ -111,8 +111,9 @@ const arrowVar = `url(${arrowList})`;
   }
   .dietician-title {
     font-size: 2.5rem;
-    margin: 0;
+    margin: 0.5rem 0 0 0;
     align-self: center;
+    font-family: "Unbound";
   }
   .animate-title::after {
     display: block;
@@ -196,6 +197,9 @@ const arrowVar = `url(${arrowList})`;
     .nutrition-container {
       grid-column: 1/2;
       margin-left: 2rem;
+    }
+    .dietician-title {
+      margin: 1rem 0;
     }
   }
 </style>
