--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -4,7 +4,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 
 <BaseLayout pageTitle="Contact Me">
   <h3>I'd love to hear from you!</h3>
-<form action="https://formsubmit.co/connor.warme@gmail.com" method="POST" >
+<form action="https://formsubmit.co/d3a941f5652a2e6a2dce66170423a79f" method="POST" >
   <label for="first-name">
     <span>First Name:</span>
     <input type="text" id="first-name" name="first_name" required />
