More styling, mostly contact page

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -35,6 +35,9 @@ import fb from "../images/icons/facebook.svg";
     text-decoration: none;
     text-transform: uppercase;
   }
+  .copyright {
+    font-size: 0.85rem;
+  }
   .built {
     width: 100%;
     text-align: center;
@@ -49,6 +52,9 @@ import fb from "../images/icons/facebook.svg";
     .built {
       margin-top: 1rem;
       padding-top: 1rem;
+    }
+    .copyright {
+      font-size: 1rem;
     }
   }
 </style>
