Styling for contact form mobile

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -25,7 +25,7 @@ import fb from "../images/icons/facebook.svg";
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 2rem 1rem;
+    padding: 1rem;
     width: 100%;
   }
   .back-top,
