--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import logo from "/pro-site/a-custom.png"
+import logo from "/a-custom.png"
 
 const fakeimg = {
   fake: true,
