--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,7 +3,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import logo from "/a-custom.png"
 
 const fakeimg = {
-  fake: true,
+  noimg: true,
   blur: true,
 }
 ---
