Add webkit for header style

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -25,6 +25,7 @@ const bgblur = blur === true ? 'blur-active' : '';
     /* backdrop-filter: blur(1px) brightness(80%); */
   }
   header.blur-active {
+    -webkit-backdrop-filter: brightness(70%);
     backdrop-filter: brightness(70%);
   }
   .mobile-box {
