Begin re-styling header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,6 +22,7 @@ const bgblur = blur === true ? 'blur-active' : '';
     justify-content: space-between;
     align-items: center;
     font-family: "Unbound", Georgia, 'Times New Roman', Times, serif;
+    background-color: rgba(245, 245, 245, 0.5);
     /* backdrop-filter: blur(1px) brightness(80%); */
   }
   header.blur-active {
