--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -15,6 +15,8 @@ const fakeimg = {
       <h1>Reach Out</h1>
       <p>I'd love to hear from you!</p>
       <form action="https://formsubmit.co/d3a941f5652a2e6a2dce66170423a79f" method="POST" >
+        <input type="text" name="_honey" style="display:none">
+        <input type="hidden" name="_captcha" value="false">
         <label for="first-name">
           <span>First Name:</span>
           <input type="text" id="first-name" name="first_name" placeholder="First Name*" maxlength="256" required />
