Style header, play with diff opacity on page text

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -63,7 +63,7 @@ const image = {
     margin-top: 50vh;
   }
   .about-content {
-    background-color: rgb(245, 245, 245);
+    background-color: rgba(245, 245, 245, 0.75);
     color: rgb(64, 64, 64);
     width: 100vw;
     max-width: 575px;
