--- a/src/pages/dietitian.astro
+++ b/src/pages/dietitian.astro
@@ -102,7 +102,7 @@ const arrowVar = `url(${arrowList})`;
     display: flex;
     flex-direction: column;
     color: rgb(64, 64, 64);
-    background-color: rgb(245, 245, 245);
+    background-color: rgba(245, 245, 245, 0.85);
     width: 100vw;
     max-width: 575px;
     padding: 0 1.5rem;
