--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,12 +22,11 @@ const bgblur = blur === true ? 'blur-active' : '';
     justify-content: space-between;
     align-items: center;
     font-family: "Unbound", Georgia, 'Times New Roman', Times, serif;
-    background-color: rgba(245, 245, 245, 0.5);
+    background-color: rgba(245, 245, 245, 0.75);
     /* backdrop-filter: blur(1px) brightness(80%); */
   }
   header.blur-active {
-    -webkit-backdrop-filter: brightness(70%);
-    backdrop-filter: brightness(70%);
+    background-color: rgb(245, 245, 245);
   }
   .mobile-box {
     width: 100vw;
@@ -39,7 +38,7 @@ const bgblur = blur === true ? 'blur-active' : '';
     text-decoration: none;
   }
   .header-name {
-    margin: 1rem 2rem;
+    margin: 1rem 1.5rem;
     text-transform: uppercase;
     font-size: 18px;
   }
@@ -51,7 +50,13 @@ const bgblur = blur === true ? 'blur-active' : '';
       width: fit-content;
     }
     .header-name {
-      font-size: 1.7rem;
+      font-size: 1.15rem;
+    }
+  }
+  @media screen and (min-width: 980px) {
+    .header-name {
+      font-size: 1.75rem;
+      margin-left: 2rem;
     }
   }
 </style>
