--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -62,6 +62,7 @@ const background = blur ? 'none' : backgroundimg;
           width: 100%;
           object-fit: cover;
           object-position: var(--position);
+          padding: 0;
         }
       }
       @media (hover: none) and (orientation: portrait) {
