--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -99,6 +99,12 @@ const fakeimg = {
   textarea {
     min-height: 100px;
   }
+  input:focus, 
+  textarea:focus {
+    border-color: rgb(53, 84, 136);
+    border-color: rgb(254, 7, 62);
+    outline: none;
+  }
   button {
     padding: 1rem 2rem;
     margin: 0.5rem;
@@ -112,9 +118,14 @@ const fakeimg = {
     font-weight: 800;
     letter-spacing: 1px;
     box-shadow: 1px 1px 3px rgb(64, 64, 64);
+    transition: all 0.25s ease-in;
   }
   button:hover {
     cursor: pointer;
+  }
+  button:active {
+    transform: scale(0.95);
+    box-shadow: 1px 1px 5px rgb(64, 64, 64);
   }
   @media screen and (min-width: 480px) {
 
