--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -13,6 +13,7 @@
 
 <nav>
   <div class="nav-links">
+    <a href="/pro-site/home" class="nav-home">Home</a>
     <a href="/pro-site/about">About</a>
     <a href="/pro-site/athlete">Athlete</a>
     <a href="/pro-site/gallery">Gallery</a>
